--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,97 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/screen.css" />
   </head>
+
   <body>
-    <h1 class='hello-world'>Hello, World!</h1>
+    <header>
+      <img src="/images/other AP.jpeg" alt="Andrew Perniciaro" />
+      <section>
+        <!-- word bubble -->
+        <p>
+          Hi, I'm Andrew Perniciaro!
+        </p>
+        <p>
+          I'm a web-developer in training in Saint Petersburg, FL.
+        </p>
+      </section>
+      <img src="/images/tri.png" alt="quotation arrow" />
+    </header>
+
+    <section class="projects">
+      <a>
+        <img src="/images/sliced/one-list-slice.png" alt="one list slice" />
+      </a>
+      <a>
+        <img
+          src="/images/sliced/make-it-rain-slice.png"
+          alt="make it rain slice"
+        />
+      </a>
+      <a>
+        <img
+          src="/images/sliced/bomb-sniffer-slice.png"
+          alt="bomb sniffer slice"
+        />
+      </a>
+      <a>
+        <img
+          src="/images/sliced/sensei-sense-slice.png"
+          alt="sensei sense slice"
+        />
+      </a>
+    </section>
+
+    <section class="blog">
+      <section class="blog-post">
+        <img src="/images/react.png" alt="react" />
+        <article>
+          <p>Hello, react!</p>
+          <p>date1</p>
+          <p>Lorem ipsum</p>
+        </article>
+        <a>
+          <p>
+            Keep Reading
+          </p>
+        </a>
+      </section>
+      <section class="blog-post">
+        <img src="/images/code.png" alt="code pic" />
+        <article>
+          <p>Fizz Buzz</p>
+          <p>date2</p>
+          <p>Lorem ipsum</p>
+        </article>
+        <a>
+          <p>
+            Keep Reading
+          </p>
+        </a>
+      </section>
+    </section>
+
+    <footer>
+      <p>
+        Stay connected
+      </p>
+      <a>
+        <logo>
+          <!-- social media -->
+        </logo>
+      </a>
+      <p>
+        Copyright
+      </p>
+    </footer>
   </body>
 </html>
