--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,11 @@
     </section>
 
     <section class="blog">
-      <section class="blog-post">
-        <img src="/images/react.png" alt="react" />
+      <article class="blog-post-1">
+        <!-- <header></header> -->
         <article>
-          <p>Hello, react!</p>
-          <p>date1</p>
+          <h1>Hello, react!</h1>
+          <h2>date1</h2>
           <p>Lorem ipsum</p>
         </article>
         <a>
@@ -64,12 +64,12 @@
             Keep Reading
           </p>
         </a>
-      </section>
-      <section class="blog-post">
-        <img src="/images/code.png" alt="code pic" />
+      </article>
+      <article class="blog-post-2">
+        <!-- <header></header> -->
         <article>
-          <p>Fizz Buzz</p>
-          <p>date2</p>
+          <h1>Fizz Buzz</h1>
+          <h2>date2</h2>
           <p>Lorem ipsum</p>
         </article>
         <a>
@@ -77,7 +77,7 @@
             Keep Reading
           </p>
         </a>
-      </section>
+      </article>
     </section>
 
     <footer>
@@ -85,9 +85,7 @@
         Stay connected
       </p>
       <a>
-        <logo>
-          <!-- social media -->
-        </logo>
+        <img src="" alt="social media" />
       </a>
       <p>
         Copyright
