Moved projects to header

--- a/public/index.html
+++ b/public/index.html
@@ -14,42 +14,42 @@
 
   <body>
     <header>
-      <img src="/images/other AP.jpeg" alt="Andrew Perniciaro" />
-      <section>
-        <!-- word bubble -->
-        <p>
-          Hi, I'm Andrew Perniciaro!
-        </p>
-        <p>
-          I'm a web-developer in training in Saint Petersburg, FL.
-        </p>
+      <section class="salutation">
+        <img src="/images/other AP.jpeg" alt="Andrew Perniciaro" />
+        <section class="word-bubble">
+          <p>
+            Hi, I'm Andrew Perniciaro!
+          </p>
+          <p>
+            I'm a web-developer in training in Saint Petersburg, FL.
+          </p>
+        </section>
+        <img src="/images/tri.png" alt="quotation arrow" />
       </section>
-      <img src="/images/tri.png" alt="quotation arrow" />
+      <section class="projects">
+        <a>
+          <img src="/images/sliced/one-list-slice.png" alt="one list slice" />
+        </a>
+        <a>
+          <img
+            src="/images/sliced/make-it-rain-slice.png"
+            alt="make it rain slice"
+          />
+        </a>
+        <a>
+          <img
+            src="/images/sliced/bomb-sniffer-slice.png"
+            alt="bomb sniffer slice"
+          />
+        </a>
+        <a>
+          <img
+            src="/images/sliced/sensei-sense-slice.png"
+            alt="sensei sense slice"
+          />
+        </a>
+      </section>
     </header>
-
-    <section class="projects">
-      <a>
-        <img src="/images/sliced/one-list-slice.png" alt="one list slice" />
-      </a>
-      <a>
-        <img
-          src="/images/sliced/make-it-rain-slice.png"
-          alt="make it rain slice"
-        />
-      </a>
-      <a>
-        <img
-          src="/images/sliced/bomb-sniffer-slice.png"
-          alt="bomb sniffer slice"
-        />
-      </a>
-      <a>
-        <img
-          src="/images/sliced/sensei-sense-slice.png"
-          alt="sensei sense slice"
-        />
-      </a>
-    </section>
 
     <section class="blog">
       <article class="blog-post-1">
