Added formatting in blog sectioatting in blog section

--- a/public/index.html
+++ b/public/index.html
@@ -52,26 +52,26 @@
     </header>
 
     <section class="blog">
-      <article class="blog-post-1">
-        <!-- <header></header> -->
-        <article>
+      <article id="blog-post-1">
+        <section class="blog-head"></section>
+        <div>
           <h1>Hello, react!</h1>
           <h2>date1</h2>
           <p>Lorem ipsum</p>
-        </article>
+        </div>
         <a>
           <p>
             Keep Reading
           </p>
         </a>
       </article>
-      <article class="blog-post-2">
-        <!-- <header></header> -->
-        <article>
+      <article>
+        <section class="blog-head"></section>
+        <div>
           <h1>Fizz Buzz</h1>
           <h2>date2</h2>
           <p>Lorem ipsum</p>
-        </article>
+        </div>
         <a>
           <p>
             Keep Reading
