--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,18 @@
   </head>
 
   <body>
-    <header>
-      <section class="salutation">
+    <header class="page-head">
+      <section class="personal">
         <img src="/images/other AP.jpeg" alt="Andrew Perniciaro" />
-        <section class="word-bubble">
-          <p>
-            Hi, I'm Andrew Perniciaro!
-          </p>
-          <p>
-            I'm a web-developer in training in Saint Petersburg, FL.
-          </p>
-        </section>
-        <img src="/images/tri.png" alt="quotation arrow" />
+          <section class="word-bubble">
+            <h3>
+              Hi, I'm Andrew Perniciaro!
+            </h3>
+            <h4>
+              I'm a student web-developer in Saint Petersburg, FL.
+            </h4>
+            <img class="triangle" src="/images/tri.png" alt="quotation arrow" />
+          </section>
       </section>
       <section class="projects">
         <a>
@@ -55,9 +55,22 @@
       <article id="blog-post-1">
         <section class="blog-head"></section>
         <div>
-          <h1>Hello, react!</h1>
-          <h2>date1</h2>
-          <p>Lorem ipsum</p>
+          <header>
+            <h1>Hello, React.</h1>
+            <h2>January 1, 2019</h2>
+          </header>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+            maximus libero magna, quis faucibus dolor dapibus a. Morbi nulla
+            justo, feugiat quis venenatis et, lacinia vel libero. Nunc vehicula
+            pulvinar mauris, in sagittis ligula pretium non. Integer posuere
+            fringilla ex, non tincidunt justo. Etiam id dolor sed purus ornare
+            pharetra nec in tellus. Phasellus elementum volutpat diam, tempus
+            ornare sem mattis id. Suspendisse turpis magna, imperdiet id viverra
+            vitae, euismod ut elit. Morbi lacinia volutpat placerat. Mauris
+            tempus diam vel fermentum porttitor. Pellentesque imperdiet est in
+            augue fermentum lobortis.
+          </p>
         </div>
       </article>
       <a>
@@ -68,9 +81,22 @@
       <article>
         <section class="blog-head"></section>
         <div>
-          <h1>Fizz Buzz</h1>
-          <h2>date2</h2>
-          <p>Lorem ipsum</p>
+          <header>
+            <h1>Fizz Buzz</h1>
+            <h2>January 2, 2019</h2>
+          </header>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+            maximus libero magna, quis faucibus dolor dapibus a. Morbi nulla
+            justo, feugiat quis venenatis et, lacinia vel libero. Nunc vehicula
+            pulvinar mauris, in sagittis ligula pretium non. Integer posuere
+            fringilla ex, non tincidunt justo. Etiam id dolor sed purus ornare
+            pharetra nec in tellus. Phasellus elementum volutpat diam, tempus
+            ornare sem mattis id. Suspendisse turpis magna, imperdiet id viverra
+            vitae, euismod ut elit. Morbi lacinia volutpat placerat. Mauris
+            tempus diam vel fermentum porttitor. Pellentesque imperdiet est in
+            augue fermentum lobortis.
+          </p>
         </div>
       </article>
       <a>
@@ -82,14 +108,15 @@
 
     <footer>
       <p>
-        Stay connected
+        Stay connected with me.
       </p>
       <a>
         <img src="" alt="social media" />
       </a>
-      <p>
-        Copyright
-      </p>
+      <h6>
+        Copyright &#169 2019 Andrew Perniciaro. Built with &#9829 at Suncoast
+        Developers Guild.
+      </h6>
     </footer>
   </body>
 </html>
