--- a/public/index.html
+++ b/public/index.html
@@ -17,38 +17,46 @@
       <section class="personal">
         <img src="/images/other AP.jpeg" alt="Andrew Perniciaro" />
           <section class="word-bubble">
-            <h3>
-              Hi, I'm Andrew Perniciaro!
-            </h3>
-            <h4>
-              I'm a student web-developer in Saint Petersburg, FL.
-            </h4>
+              <h3>
+                Hi, I'm Andrew Perniciaro!
+              </h3>
+              <h4>
+                I'm a student web-developer in Saint Petersburg, FL.
+              </h4>
             <img class="triangle" src="/images/tri.png" alt="quotation arrow" />
           </section>
       </section>
-      <section class="projects">
+      <ul class="projects">
+        <li>
         <a>
           <img src="/images/sliced/one-list-slice.png" alt="one list slice" />
         </a>
+        </li>
+        <li>
         <a>
           <img
             src="/images/sliced/make-it-rain-slice.png"
             alt="make it rain slice"
           />
         </a>
+        </li>
+        <li>
         <a>
           <img
             src="/images/sliced/bomb-sniffer-slice.png"
             alt="bomb sniffer slice"
           />
         </a>
+        </li>
+        <li>
         <a>
           <img
             src="/images/sliced/sensei-sense-slice.png"
             alt="sensei sense slice"
           />
         </a>
-      </section>
+        </li>
+      </ul>
     </header>
 
     <section class="blog">
