Added media query

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="page-head">
       <section class="personal">
-        <img src="/images/other AP.jpeg" alt="Andrew Perniciaro" />
+        <img src="/images/ap.jpg" alt="Andrew Perniciaro" />
           <section class="word-bubble">
               <h3>
                 Hi, I'm Andrew Perniciaro!
@@ -60,8 +60,8 @@
     </header>
 
     <section class="blog">
-      <article id="blog-post-1">
-        <section class="blog-head"></section>
+      <article>
+        <section id="blog-head-1"></section>
         <div>
           <header>
             <h1>Hello, React.</h1>
@@ -87,7 +87,7 @@
         </p>
       </a>
       <article>
-        <section class="blog-head"></section>
+        <section id="blog-head-2"></section>
         <div>
           <header>
             <h1>Fizz Buzz</h1>
