--- a/public/proj4.html
+++ b/public/proj4.html
@@ -118,33 +118,9 @@
       <p>
         Stay connected with me.
       </p>
-      <ul>
-        <li>
-          <a>
-            <img src="/images/twitter.png" alt="social media" />
-          </a>
-        </li>
-        <li>
-            <a>
-              <img src="/images/twitter.png" alt="social media" />
-            </a>
-          </li>
-          <li>
-              <a>
-                <img src="/images/twitter.png" alt="social media" />
-              </a>
-            </li>
-            <li>
-                <a>
-                  <img src="/images/twitter.png" alt="social media" />
-                </a>
-              </li>
-              <li>
-                  <a>
-                    <img src="/images/twitter.png" alt="social media" />
-                  </a>
-                </li>
-      </ul>
+      <a>
+        <img src="" alt="social media" />
+      </a>
       <h6>
         Copyright &#169 2019 Andrew Perniciaro. Built with &#9829 at Suncoast
         Developers Guild.
